force-app/main/objects/Log_Trace_Utils__mdt/Log_Trace_Utils__mdt.object-meta.xml
<CustomObject>
    <label>Log Trace Util</label>
    <pluralLabel>Log Trace Util</pluralLabel>
</CustomObject>