force-app/main/objects/Log_Trace_Utils__mdt/fields/Is_Extension_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Extension_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is true, then the Override class will be used to process the Platform Event data and store it into a Salesforce object</description>
    <inlineHelpText>If this checkbox is true, then the Override class will be used to process the Platform Event data and store it into a Salesforce object</inlineHelpText>
    <label>Is Extension Required?</label>
    <type>Checkbox</type>
</CustomField>