force-app/main/objects/Log_Trace_Utils__mdt/fields/Is_Purging_Required_for_Logging__c.field-meta.xml
<CustomField>
    <fullName>Is_Purging_Required_for_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then Logs will be deleted after declared interval.</description>
    <inlineHelpText>If checked then Logs will be deleted after declared interval.</inlineHelpText>
    <label>Is Purging Required for Logging?</label>
    <type>Checkbox</type>
</CustomField>