force-app/main/objects/Log_Trace_Utils__mdt/fields/Purging_Object__c.field-meta.xml
<CustomField>
    <fullName>Purging_Object__c</fullName>
    <label>Purging Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>